<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="title">Udacity</string>
    <string name="quote">\"An investment in Knowledge pays the best interest\"</string>
    <string name="address">2456 Latham St.\n Mountain View, CA 94043\n 650-555-555</string>
    <string name="description_img_1">Udacity logo</string>
    <string name="description_img_2">android logo</string>

</resources>
