<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HelloAndroid">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_color"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_img_1"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/udacity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title"
            android:textColor="#F5F5F5"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/quote"
            android:textColor="#000"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#F5F5F5"
        android:layout_weight="2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:contentDescription="@string/description_img_2"
            android:src="@drawable/android_doodle_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#4FC0C4"
            android:textSize="14sp" />

    </LinearLayout>



</LinearLayout>

